fix ProcessList img on Safari

--- a/src/components/sections/ProcessList/styles.module.scss
+++ b/src/components/sections/ProcessList/styles.module.scss
@@ -1,41 +1,41 @@
 .processList {
   display: grid;
-  gap: clamp(80px, calc(128vw/7.68), 96px);
+  gap: clamp(80px, calc(128vw / 7.68), 96px);
   .process {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 32px;
     row-gap: 48px;
-    align-items:center;
-    font-size: clamp(calc(16rem/16), calc(18vw/7.68), calc(18rem/16));
+    align-items: center;
+    font-size: clamp(calc(16rem / 16), calc(18vw / 7.68), calc(18rem / 16));
     .heading {
       display: grid;
-      gap: clamp(6px, calc(16vw/7.68), 16px);
+      gap: clamp(6px, calc(16vw / 7.68), 16px);
       grid-template-columns: auto 1fr;
       align-items: center;
       h2 {
-        font-size: clamp(calc(18rem/16), calc(28vw/7.68), calc(28rem/16));
+        font-size: clamp(calc(18rem / 16), calc(28vw / 7.68), calc(28rem / 16));
       }
       .numerator {
         display: grid;
-        font-size: clamp(calc(16rem/16), calc(28vw/7.68), calc(28rem/16));
+        font-size: clamp(calc(16rem / 16), calc(28vw / 7.68), calc(28rem / 16));
         height: 64px;
-        width:64px;
+        width: 64px;
         align-items: center;
         justify-items: center;
       }
     }
     .blocks {
-      align-self:end;
+      align-self: end;
       p:not(:first-child) {
         margin-top: 32px;
       }
     }
     .img {
-      width:100%;
-      height:100%;
+      width: 100%;
+      height: auto;
       object-fit: cover;
-      border: 1px solid var(--neutral-700, #4F4F52);
+      border: 1px solid var(--neutral-700, #4f4f52);
       border-radius: 2px;
     }
     @media (max-width: 1199px) {
@@ -64,7 +64,7 @@
         padding-top: unset;
       }
       .blocks {
-        padding-top: 8px; 
+        padding-top: 8px;
       }
     }
   }
